[package]
name = "odbc2arrow"
version = "0.1.0"
authors = ["Neville Dipale <nevilledips@gmail.com>"]
edition = "2018"
repository = "https://github.com/nevi-me/odbc2arrow"
documentation = "https://docs.rs/odbc2arrow/"
license = "Apache 2.0"
keywords = ["odbc", "arrow", "apache-arrow", "sql"]
readme = "README.md"


[dependencies]
odbc-api = "0.7.0"
odbc-safe = "*"
arrow = "2.0.0"
log = "0.4.11"
chrono = "0.4"